# binance_datatool

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  COMPLETE_OBSERVABILITY_IMPLEMENTATION.md  CROSS_REFERENCE_ANALYSIS_REPORT.md  DOCS_CLEANUP_COMPLETION_REPORT.md  DOCUMENTATION_COMPLETE.md  DOCUMENTATION_MERGE_COMPLETION_REPORT.md  HIVE_MIND_COMPLETION_REPORT.md  HIVE_MIND_DOCUMENTATION_CLEANUP_COMPLETION.md  HIVE_MIND_DOCUMENTATION_REFACTORING_COMPLETION.md  HIVE_MIND_DOCUMENTATION_REORGANIZATION_COMPLETION.md  HIVE_MIND_INTEGRATION_DELTA_COMPLETION_REPORT.md  HIVE_MIND_SPECIFICATIONS_CLEANUP_COMPLETION.md  HIVE_MIND_SPECIFICATIONS_TO_FEATURES_COMPLETION.md  HIVE_VALIDATION_GAMMA_IMPLEMENTATION_COMPLIANCE_REPORT.md  IMPLEMENTATION_COMPLIANCE_REPORT.md  INFRASTRUCTURE_DEPLOYMENT_GUIDE.md  INFRASTRUCTURE_REORGANIZATION_COMPLETION.md  INFRASTRUCTURE_VERIFICATION_COMPLETION.md  K3S_LOCAL_INFRASTRUCTURE_SPECS_UPDATE_COMPLETION.md  LEGACY_WORKFLOW_COMPATIBILITY_FINAL_REPORT.md  LEGACY_WORKFLOW_COMPREHENSIVE_ANALYSIS_REPORT.md  MODULAR_DECOMPOSITION_COMPLETION_REPORT.md  Makefile  OBSERVABILITY_PRODUCTION_READINESS_REPORT.md  OPENTELEMETRY_IMPLEMENTATION_COMPLETE.md  OPENTELEMETRY_IMPLEMENTATION_PLAN.md  OPENTELEMETRY_LOGGING_IMPLEMENTATION.md  OPENTELEMETRY_METRICS_ANALYSIS.md  OPENTELEMETRY_SDK_IMPLEMENTATION_SUMMARY.md  OPENTELEMETRY_TRACING_SDK_IMPLEMENTATION.md  PROJECT_COMPLETION_SUMMARY.md  README.md  README_LAKEHOUSE.md  S3_DIRECT_SYNC_IMPLEMENTATION_SUMMARY.md  S3_DIRECT_SYNC_TEST_REPORT.md  SPECS_DRIVEN_FLOW_COMPLETION_REPORT.md  SPECS_REORGANIZATION_COMPLETION_REPORT.md  (+22 more)
.claude/commands/: sparc.md
.github/workflows/: spec-driven-workflow.yml  uv-ci.yml  uv-modern-ci.yml
benchmarks/: otel_logging_performance.py  production_benchmark.py
config/: archive_collection_config.json
docs/: FORMAL_SPECIFICATION.md  INDEX.md  README.md  S3_DIRECT_SYNC_IMPLEMENTATION.md  SKILL.md  architecture.md  audit.md  data-flows.md  data-sources.md  design-pipeline-architecture.md  implementation-guide.md  opentelemetry-logging.md  requirements.md  schema-matrix.md  silver-layer-spec.md  skills-subagents.md  specs-driven-development.md
docs/architecture/: system-architecture.md
docs/archive/: BINANCE_ARCHIVE_EXPLORATION_REPORT.md  CRYPTO_LAKEHOUSE_INTEGRATION_REPORT.md  ENHANCED_ARCHIVE_COLLECTION_SUMMARY.md  GAPS_ANALYSIS.md  LEGACY_COMPATIBILITY_REPORT.md  PREFECT_INTEGRATION.md  README.md  REAL_DATA_TESTING_REPORT.md  REPOSITORY_STRUCTURE.md  WORKFLOW_TESTING_RESULTS.md  enhanced_binance_archive_matrix.json
docs/brainstorms/: 2026-05-08-archive-gap-filling-requirements.md  2026-05-08-binance-sdk-migration-requirements.md  2026-05-08-enhanced-data-pipeline-requirements.md  2026-05-09-realtime-streaming-relay.md  2026-05-09-websocket-streaming-requirements.md
docs/deployment/: infrastructure-updated.md  infrastructure-verification-report.md  infrastructure.md  k3s-local-deployment-guide.md
docs/development/: makefile-integration-specs.md  spec-driven-workflow.md  uv-migration-guide.md  uv-modern-best-practices.md  uv-troubleshooting.md  uv-workflow-specs.md  workflow-integration-guide.md
docs/features/: FEATURE_INTERDEPENDENCIES.md  README.md
docs/observability/: validation-checklist.md
docs/plans/: 2026-05-08-001-refactor-binance-sdk-migration-plan.md  2026-05-08-002-feat-archive-gap-fill-plan.md  2026-05-09-003-fix-schema-gaps-plan.md  2026-05-09-004-prefect-best-practices-plan.md  2026-05-10-pipeline-workflow-hardening-requirements.md
docs/proposals/: bronze.md  ccxt.md  data-ops.md  gap-healing.md  iceberg.md  migration.md  multi-source.md
docs/reference/: testing.md
docs/s3-direct-sync/: README.md
docs/specifications/: README.md
docs/specs/: functional-requirements.md
docs/specs-driven-flow/: IMPLEMENTATION-REVIEW.md  NEW-FEATURE-GUIDE.md  README.md  RESEARCH-ANALYSIS.md
docs/testing/: test-specifications.md
docs/workflows/: archive-collection-examples.md  legacy-equivalents.md
examples/: README.md  analyze_existing_schemas.py  archive_collection_config.json  binance_archive_matrix.json  crypto_tracing_demo.py  enhanced_archive_collection_config.json  enhanced_s3_direct_sync_config.json  otel_logging_demo.py  run_archive_collection.py  run_enhanced_archive_collection.py  run_enhanced_archive_workflow.py  run_prefect_archive_collection.py  run_s3_direct_sync_demo.py  s5cmd_direct_sync_workflow_config.json  schema_exploration_simple.py
infrastructure/: README.md
legacy/: README.md
local-dev/: README.md
scripts/: ARCHIVE_WORKFLOW_DOCUMENTATION.md  ai-spec-assistant.py  archive_sample_collector.py  bdd-generator.py  build.sh  create-feature.sh  deploy-infrastructure.sh  deploy-k3s-local.sh  dev.sh  refresh_fixtures.py  setup.sh  sparc-workflow.sh  test.sh  ty_check.py  validate-k3s-specs.sh
specs/: README.md  s3_direct_sync_specifications.md
swarm_test_configs/: comparison_test_plan.json  original_workflow_test_config.json  s5cmd_direct_sync_test_config.json
swarm_test_results/: performance_comparison_analysis.md  swarm_test_execution_report.md
test_results/: enhanced_workflow_test_report.md
tests/: __init__.py  conftest.py  sample_archive.py  test_adapter_binance.py  test_adapter_coinbase.py  test_archive_exploration.py  test_checksum.py  test_cli.py  test_complete_observability_integration.py  test_config.py  test_core_functionality.py  test_data_merger.py  test_datacontract.py  test_e2e_pipeline.py  test_enhanced_workflow_simple.py  test_exchange.py  test_functional_validation.py  test_health_check.py  test_ingestion.py  test_lakehouse_simple.py  test_lakehouse_workflow.py  test_legacy_workflow_equivalents.py  test_lineage.py  test_models.py  test_otel_integration.py  test_otel_logging.py  test_otel_tracing_integration.py  test_otel_validation.py  test_performance_benchmarks.py  test_processing.py  test_processing_workflow.py  test_query_engine.py  test_resampler.py  test_s3_direct_sync.py  test_s5cmd_batch.py  test_s5cmd_manual.txt  test_simple_download.py  test_sink.py  test_source_registry.py  test_storage.py  (+2 more)
(+327 files in other folders)
